--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -7,8 +7,7 @@ body {
 }
 
 #header {
-	position: absolute;
-    top: 0;
+    top: 5%;
     left: 0;
     width: 100%;
     height: 15%;
@@ -16,16 +15,20 @@ body {
 }
 
 #content {
-	position: absolute;
     top: 15%;
     left: 0;
     right: 0;
     bottom: 0;
+    clear: both;
 }
 
 .container-fluid, .jumbotron {
 	height: 100%;
 	width: 100%;
+}
+
+.center {
+  text-align: center;
 }
 
 /*-------header.html------------*/
