--- a/client/views/templates/header/header.html
+++ b/client/views/templates/header/header.html
@@ -1,18 +1,20 @@
 <template name="header">
-	<nav class="navbar navbar-default" role="navigation">
-	  <div class="container">
+	<div class="container">
+		<nav class="navbar navbar-inverse" role="navigation">
+		  <div class="container">
 
-	    <!-- Brand and toggle get grouped for better mobile display -->
-	    <div class="navbar-header">
-	      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	        <span class="sr-only">Toggle navigation</span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	        <span class="icon-bar"></span>
-	      </button>
-	      <a class="navbar-brand" href="#"><span>myApp Bitches</span></a>
-	    </div>
+		    <!-- Brand and toggle get grouped for better mobile display -->
+		    <div class="navbar-header">
+		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		        <span class="sr-only">Toggle navigation</span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		        <span class="icon-bar"></span>
+		      </button>
+		      <a class="navbar-brand" href="#"><span>myApp Bitches</span></a>
+		    </div>
 
-	  </div><!-- /.container-fluid -->
-	</nav>
+		  </div><!-- /.container-fluid -->
+		</nav>
+	</div>
 </template>
