began work on driver side of application

--- a/client/views/templates/header/header.html
+++ b/client/views/templates/header/header.html
@@ -11,7 +11,7 @@
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		      </button>
-		      <a class="navbar-brand" href="#"><span>myApp Bitches</span></a>
+		      <a class="navbar-brand" href="#"><span>Divyup</span></a>
 		    </div>
 
 		  </div><!-- /.container-fluid -->
