--- a/client/views/templates/content/home/home.html
+++ b/client/views/templates/content/home/home.html
@@ -1,6 +1,10 @@
 <template name="home">
 	{{#if currentUser}}
-		{{> storeMenu}}
+		{{# if f_isDriver}}
+			{{> driverMenu}}
+		{{else}}
+			{{> storeMenu}}
+		{{/if}}
 	{{else}}
 		{{> login}}
 	{{/if}}
