--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -5,11 +5,56 @@
 	</div>
 
 	<div id="content">
-		<div class="container-fluid">
-			<div class="jumbotron">
-				{{> yield}}
+		<div id="wrapper">
+			{{> sideBar}}
+        
+	        <div id="page-content-wrapper">
+	            <div class="container-fluid">
+	                <div class="row">
+						<div class="jumbotron">
+							{{> yield}}
+						</div>
+						<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+					</div>
+				</div>
 			</div>
+
 		</div>
 	</div> 
 
+</template>
+
+<template name="sideBar">
+	 <!-- Sidebar -->
+        <div id="sidebar-wrapper">
+            <ul class="sidebar-nav">
+                <li class="sidebar-brand">
+                    <a href="#">
+                        Start Bootstrap
+                    </a>
+                </li>
+                <li>
+                    <a href="#">Dashboard</a>
+                </li>
+                <li>
+                    <a href="#">Shortcuts</a>
+                </li>
+                <li>
+                    <a href="#">Overview</a>
+                </li>
+                <li>
+                    <a href="#">Events</a>
+                </li>
+                <li>
+                    <a href="#">About</a>
+                </li>
+                <li>
+                    <a href="#">Services</a>
+                </li>
+                <li>
+                    <a href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+        <!-- /#sidebar-wrapper -->
 </template>
