--- a/client/views/main.html
+++ b/client/views/main.html
@@ -1,3 +1,5 @@
 <head>
-	<title>myApp</title>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>DivyUp</title>
 </head>
