added login to the sidebar

--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -29,30 +29,21 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
-                        Start Bootstrap
+                    <a href="{{pathFor 'home'}}">
+                        Home
                     </a>
                 </li>
                 <li>
-                    <a href="#">Dashboard</a>
+                    <a href="#">Dummy 1</a>
                 </li>
                 <li>
-                    <a href="#">Shortcuts</a>
+                    <a href="#">Dummy 2</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="#">Dummy 3</a>
                 </li>
                 <li>
-                    <a href="#">Events</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Services</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
+                    {{> loginButtons}}
                 </li>
             </ul>
         </div>
