--- a/client/views/templates/content/storeMenu/storeMenu.html
+++ b/client/views/templates/content/storeMenu/storeMenu.html
@@ -1,5 +1,6 @@
 <template name="storeMenu">
 	<div class="list-group">
+	{{>menuHeader header_text="Choose your Store!"}}
 		{{#each f_stores}}
 			<div class="center">  
 				<a href="#" class="list-group-item">
