--- a/client/views/templates/content/driverMenu/statusMenu/statusMenu.html
+++ b/client/views/templates/content/driverMenu/statusMenu/statusMenu.html
@@ -1,6 +1,10 @@
 <template name="statusMenu">
+	{{>backButton to_name="driverMenu"}}
 	<div class="list-group">
-		<div class="center">  
+		<div class="center"> 
+			<a href="#" class="list-group-item active">
+			    <h4 class="list-group-item-heading">Inactive</h4>
+			</a> 
 			<a href="#" class="list-group-item">
 			    <h4 class="list-group-item-heading">Going</h4>
 			</a>
