--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -14,7 +14,6 @@
 						<div class="jumbotron">
 							{{> yield}}
 						</div>
-						<a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
 					</div>
 				</div>
 			</div>
@@ -29,18 +28,13 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="{{pathFor 'home'}}">
-                        Home
-                    </a>
+                    Divyup!
                 </li>
                 <li>
-                    <a href="#">Dummy 1</a>
+                    <a href="{{pathFor 'storeMenu'}}">Stores</a>
                 </li>
                 <li>
-                    <a href="#">Dummy 2</a>
-                </li>
-                <li>
-                    <a href="#">Dummy 3</a>
+                    <a href="{{pathFor 'myDivys'}}">My Divys</a>
                 </li>
                 <li>
                     {{> loginButtons}}
