--- a/client/views/templates/header/header.html
+++ b/client/views/templates/header/header.html
@@ -1,18 +1,16 @@
 <template name="header">
 	<div class="container">
 		<nav class="navbar navbar-inverse" role="navigation">
-		  <div class="container">
+		  <div class="container-fluid">
 
-		    <!-- Brand and toggle get grouped for better mobile display -->
-		    <div class="navbar-header">
-		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-		        <span class="sr-only">Toggle navigation</span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		        <span class="icon-bar"></span>
-		      </button>
-		      <a class="navbar-brand" href="#"><span>Divyup</span></a>
-		    </div>
+			    <div class="navbar-header pull-right">
+			      <a class="navbar-brand" href="#">Template title</a>
+			    </div>
+			    <div class="navbar-header pull-left">
+			      <button type="button" class="btn btn-default navbar-btn" aria-label="Justify" name="menuToggle">
+			      <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+			  		</button>
+			    </div>
 
 		  </div><!-- /.container-fluid -->
 		</nav>
