--- a/client/views/templates/content/storeMenu/storeMenu.html
+++ b/client/views/templates/content/storeMenu/storeMenu.html
@@ -1,10 +1,12 @@
 <template name="storeMenu">
 	<div class="list-group">
-	{{>menuHeader header_text="Choose your Store!"}}
 		{{#each f_stores}}
 			<div class="center">  
 				<a href="#" class="list-group-item">
-			    	<h4 class="list-group-item-heading">{{storeName}}</h4>
+			    	<h4 class="list-group-item-heading">{{storename}}</h4>
+			    	<p class="list-group-item-text">distance: {{distance}} {{distance_unit}}</p>
+			    		<p class="list-group-item-text">{{#if open}}Open{{else}}Closed{{/if}}
+			    		</p>	
 			  	</a>
 		  	</div>
 	  	{{/each}}
