added foodMenu with dummy data

--- a/client/views/templates/content/divyMenu/divyMenu.html
+++ b/client/views/templates/content/divyMenu/divyMenu.html
@@ -9,7 +9,7 @@
 			    	</h4>
 			    	<p class="list-group-item-text">
 			    		current Divy: {{total}}/{{quota}}
-			    		<span class="badge"><button type="button" class="btn btn-default">Divy!</button></span>
+			    		<span class="badge"><button type="button" class="btn btn-default" name="commitDivy">Divy!</button></span>
 			    	</p>
 			    	<p class="list-group-item-text">{{f_storename}}</p>
 			  	</a>
