--- a/client/views/templates/header/header.html
+++ b/client/views/templates/header/header.html
@@ -1,6 +1,6 @@
 <template name="header">
 	<div class="container">
-		<nav class="navbar navbar-inverse" role="navigation">
+		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 		  <div class="container-fluid">
 
 			    <div class="navbar-header pull-right">
@@ -11,7 +11,6 @@
 			      <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
 			  		</button>
 			    </div>
-
 		  </div><!-- /.container-fluid -->
 		</nav>
 	</div>
