--- a/client/views/templates/content/driverMenu/orderMenu/orderMenu.html
+++ b/client/views/templates/content/driverMenu/orderMenu/orderMenu.html
@@ -1,5 +1,5 @@
 <template name="orderMenu">
-	{{>backButton to_name="driverMenu"}}
+	{{>backButton router_code="Router.go('driverMenu')"}}
 	<div class="list-group">
 		{{#each f_orders}}
 			<div class="center">  
