--- a/client/views/templates/content/divyMenu/divyMenu.html
+++ b/client/views/templates/content/divyMenu/divyMenu.html
@@ -14,5 +14,17 @@
 			    	<p class="list-group-item-text">{{f_storename}}</p>
 			  	</a>
 	  	{{/each}}
+		{{#each f_deliveryWindows}} 
+				<a href="#" class="list-group-item">
+			    	<h4 class="list-group-item-heading">
+			    		departTime: {{f_departTime}}
+			    	</h4>
+			    	<p class="list-group-item-text">
+			    		arrivalTime: {{f_arrivalTime}}
+			    		<span class="badge"><button type="button" class="btn btn-default" name="commitDivy">Divy!</button></span>
+			    	</p>
+			    	<p class="list-group-item-text">Time left: {{f_countDown}}</p>
+			  	</a>
+	  	{{/each}}
 	</div>
 </template>
