--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -1,50 +1,60 @@
-html { height: 100%; }
-
-body {
-	position: relative;
-	min-height: 100%;
-    overflow: hidden;
+/*divyMenu*/
+.card {
+  background-color: white;
+  /*background-image: url(../../public/images/in_n_out.jpg);*/
+  background-image:url(in_n_out.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  height: 250px;
 }
 
-#header {
-    top: 5%;
-    left: 0;
-    width: 100%;
-    height: 15%;
-    text-align: center;
+.card-toolbar ons-back-button span {
+  color: white;
 }
 
-#content {
-    top: 15%;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    clear: both;
-}
-
-.container-fluid, .jumbotron {
-	height: 100%;
-	width: 100%;
-}
-
-.center {
+.card-name {
+  font-weight: 600;
+  font-size: 20px;
+  padding: 66px 0 8px 0;
   text-align: center;
 }
 
-.force_right {
-  float: right;
+.card-desc {
+  font-size: 14px;
+  font-weight: 400;
+  opacity: 0.9;
+  text-align: center;
+  line-height: 1.4;
 }
 
-/*-------header.html------------*/
-
-/*.navbar, .navbar > container-fluid, .navbar-header, .navbar-brand {
-	height: 100%;
-	line-height: 100%;
-	text-align: center;
+.rating {
+  text-align: center;
+  position: relative;
+  height: 0px;
 }
 
-.navbar-brand > span {
+.rating-num {
+  position: relative;
+  top: -24px;
+  height: 24px;
+  color: white;
+  line-height: 24px;
+  font-size: 12px;
+  font-weight: 600;
+  text-align: center;
+  border-radius: 4px 4px 0 0;
+  padding: 0 6px;
+  background-color: #eb482f;
+  color: white;
+  width: auto;
+  margin: 0 auto 0 auto;
   display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
+}
+
+/*.rating-num ons-icon {
+  font-size: 11px;
+  vertical-align: -0px;
 }*/
+
+/*-----------------------------------------------------------------------------*/
