--- a/client/views/templates/header/header.html
+++ b/client/views/templates/header/header.html
@@ -1,17 +1,36 @@
 <template name="header">
-	<div class="container">
-		<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-		  <div class="container-fluid">
+	<div class="navigation-bar">
+	  <div class="navigation-bar__left">
+	  	{{#if left_action}}
+		    <span class="toolbar-button--quiet navigation-bar__line-height">
+		      <i class="ion-navicon" style="font-size:32px; vertical-align:-6px;"></i>
+		    </span>
+	    {{/if}}
+	  </div>
 
-			    <div class="navbar-header pull-right">
-			      <a class="navbar-brand" href="#">Template title</a>
-			    </div>
-			    <div class="navbar-header pull-left">
-			      <button type="button" class="btn btn-default navbar-btn" aria-label="Justify" name="menuToggle">
-			      <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-			  		</button>
-			    </div>
-		  </div><!-- /.container-fluid -->
-		</nav>
+	  <div class="navigation-bar__center">
+	    {{title}}
+	  </div>
+
+	  <div class="navigation-bar__right">
+	  	{{#if right_action}}
+	    	<span class="toolbar-button--quiet navigation-bar__line-height">Label</span>
+	    {{/if}}
+	  </div>
+	</div>
+</template>
+
+<template name="header_stealth">
+	<div class="navigation-bar navigation-bar--transparent">
+	  <div class="navigation-bar__left">
+	    <span class="toolbar-button--quiet navigation-bar__line-height">
+	      <i class="ion-navicon" style="font-size:32px; vertical-align:-6px;"></i>
+	    </span>
+	  </div>
+	  <div class="navigation-bar__center">
+	  </div>
+	  <div class="navigation-bar__right">
+	    <span class="toolbar-button--quiet navigation-bar__line-height">Label</span>
+	  </div>
 	</div>
 </template>
