--- a/client/views/templates/content/login/login.html
+++ b/client/views/templates/content/login/login.html
@@ -1,6 +1,44 @@
 <template name="login">
-	<div class="center">
-		<h1>Divyup!</h1>
-		{{> loginButtons}}
-	</div>
+      {{>header title="Log In"}}
+
+     <form>
+      <div class="login-form">
+		<ul class="list">
+		  <li class="list__item">
+		    <input id="login-email" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="email">
+		  </li>
+		  <li class="list__item">
+		    <input id="login-password" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="password">
+		  </li>
+		</ul>
+        <br><br>
+        <button type="submit" class="button button--large" name="login">Login</button>
+        <a href="#" class="forgot-password">Forgot password?</a>
+        <a href="{{pathFor 'createAccount'}}" class="forgot-password" name="createAccount">Create Account</a>
+      </div>
+  	</form>
+
+</template>
+
+
+<template name="createAccount">
+      {{>header title="Create Account" back_route="Router.go('login')"}}
+
+     <form>
+      <div class="login-form">
+		<ul class="list">
+		  <li class="list__item">
+		    <input id="register-email" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="email">
+		  </li>
+		  <li class="list__item">
+		    <input id="register-password" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="password">
+		  </li>
+		  <li class="list__item">
+		    <input id="register-password-confirm" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="confirm password">
+		  </li>
+		</ul>
+        <br><br>
+        <button type="submit" class="button button--large" name="login">Create Account</button>
+      </div>
+  	</form>
 </template>
