added working login/createAccount/logout with new ui

--- a/client/views/templates/content/login/login.html
+++ b/client/views/templates/content/login/login.html
@@ -5,7 +5,7 @@
       <div class="login-form">
 		<ul class="list">
 		  <li class="list__item">
-		    <input id="login-email" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="email">
+		    <input id="login-username" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="username">
 		  </li>
 		  <li class="list__item">
 		    <input id="login-password" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="password">
@@ -28,7 +28,7 @@
       <div class="login-form">
 		<ul class="list">
 		  <li class="list__item">
-		    <input id="register-email" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="email">
+		    <input id="register-username" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="username">
 		  </li>
 		  <li class="list__item">
 		    <input id="register-password" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="password">
