--- a/client/views/templates/content/myDivys/myDivys.html
+++ b/client/views/templates/content/myDivys/myDivys.html
@@ -1,3 +1,4 @@
 <template name="myDivys">
 	<h1>Placeholder for now, show all the divys that I am a part of (placed an order)</h1>
+	{{> footer}}
 </template>
