--- a/client/views/templates/content/storeMenu/storeMenu.html
+++ b/client/views/templates/content/storeMenu/storeMenu.html
@@ -26,30 +26,5 @@
 	{{/each}}
 	</ul>
 
-	<!-- Prerequisite=This example use ionicons(http://ionicons.com) to display icons. -->
-	<div class="tab-bar">
-	  <label class="tab-bar__item">
-	    <input type="radio" name="tab-bar-a" checked="checked">
-	    <button class="tab-bar__button">
-	      <i class="tab-bar__icon ion-stop"></i>
-	      <div class="tab-bar__label">Stores</div>
-	    </button>
-	  </label>
-
-	  <label class="tab-bar__item">
-	    <input type="radio" name="tab-bar-a">
-	    <button class="tab-bar__button">
-	      <i class="tab-bar__icon ion-record"></i>
-	      <div class="tab-bar__label">My Orders</div>
-	    </button>
-	  </label>
-
-	  <label class="tab-bar__item">
-	    <input type="radio" name="tab-bar-a">
-	    <button class="tab-bar__button">
-	      <i class="tab-bar__icon ion-star"></i>
-	      <div class="tab-bar__label">Settings</div>
-	    </button>
-	  </label>
-	</div>
+	{{> footer}}
 </template>
