added newDivy Template

--- a/client/views/templates/header/header.html
+++ b/client/views/templates/header/header.html
@@ -30,8 +30,8 @@
 	  </div>
 	  <div class="navigation-bar__center">
 	  </div>
-	  <div class="navigation-bar__right">
-	    <span class="toolbar-button--quiet navigation-bar__line-height">Label</span>
+	  <div class="navigation-bar__right" name="new">
+	    <span class="toolbar-button--quiet navigation-bar__line-height" href="{{pathFor 'newDivy'}}">New</span>
 	  </div>
 	</div>
 </template>
