--- a/client/views/templates/content/login/login.html
+++ b/client/views/templates/content/login/login.html
@@ -8,7 +8,7 @@
 		    <input id="login-username" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="username">
 		  </li>
 		  <li class="list__item">
-		    <input id="login-password" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="password">
+		    <input id="login-password" type="password" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="password">
 		  </li>
 		</ul>
         <br><br>
@@ -31,10 +31,10 @@
 		    <input id="register-username" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="username">
 		  </li>
 		  <li class="list__item">
-		    <input id="register-password" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="password">
+		    <input id="register-password" type="password" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="password">
 		  </li>
 		  <li class="list__item">
-		    <input id="register-password-confirm" type="text" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="confirm password">
+		    <input id="register-password-confirm" type="password" class="text-input text-input--transparent" style="width:100%; margin-top:4px;" placeholder="confirm password">
 		  </li>
 		</ul>
         <br><br>
