Iconicons now working

--- a/client/views/templates/header/header.html
+++ b/client/views/templates/header/header.html
@@ -22,6 +22,7 @@
 </template>
 
 <template name="header_stealth">
+	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
 	<div class="navigation-bar navigation-bar--transparent">
 	  <div class="navigation-bar__left">
 	    <span class="toolbar-button--quiet navigation-bar__line-height">
