--- a/client/views/templates/footer/footer.html
+++ b/client/views/templates/footer/footer.html
@@ -1,11 +1,12 @@
 <template name="footer">
 	<!-- Prerequisite=This example use ionicons(http://ionicons.com) to display icons. -->
+	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
 	<div class="tab-bar">
 	  
 	  <label id="stores" class="tab-bar__item">
 	    <input type="radio" name="tab-bar-a">
 	    <button class="tab-bar__button">
-	      <i class="tab-bar__icon ion-stop"></i>
+	      <i class="tab-bar__icon ion-help-buoy"></i>
 	      <div class="tab-bar__label">Stores</div>
 	    </button>
 	  </label>
@@ -13,7 +14,7 @@
 	  <label id="my_orders" class="tab-bar__item">
 	    <input type="radio" name="tab-bar-a">
 	    <button class="tab-bar__button">
-	      <i class="tab-bar__icon ion-record"></i>
+	      <i class="tab-bar__icon ion-pizza"></i>
 	      <div class="tab-bar__label">My Orders</div>
 	    </button>
 	  </label>
@@ -21,7 +22,7 @@
 	  <label id="settings" class="tab-bar__item">
 	    <input type="radio" name="tab-bar-a">
 	    <button class="tab-bar__button">
-	      <i class="tab-bar__icon ion-star"></i>
+	      <i class="tab-bar__icon ion-wrench"></i>
 	      <div class="tab-bar__label">Settings</div>
 	    </button>
 	  </label>
