clicking a fooditem adds a currentOrder(if non-existant), an order, and an orderitem.

--- a/client/views/templates/content/divyMenu/divyMenu.html
+++ b/client/views/templates/content/divyMenu/divyMenu.html
@@ -3,7 +3,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
 	<div class="card">
-	<div class="card-name">{{storename}}}</div>
+	<div class="card-name">{{storename}}</div>
           <div class="card-desc">For you fat chumps (description)<br>Delivery window 6:00pm to 11:pm</div>
 	</div>
 
@@ -38,7 +38,6 @@
 		    <div style="display:inline-block">
 		    <p>Depart time: {{f_departTime}}</p>
 		    <p>Arrival time: {{f_arrivalTime}}</p>
-		    <p>{{commentsCount}}comments</P>
 			</div>
 		    <!-- <i class="tab-bar__icon ion-chevron-right" style="padding-left:1075px; color:#342e30; display:inline-block;"></i> -->
 		  </li>
