--- a/client/views/templates/content/foodMenu/foodMenu.html
+++ b/client/views/templates/content/foodMenu/foodMenu.html
@@ -2,7 +2,7 @@
 	<ul class="list-group">
 		{{>backButton _id=this._id router_code="Router.go('divyMenu', {_id: this._id})" }}
 		{{#each f_menuItems}}	
-		  <li class="list-group-item">
+		  <li class="list-group-item" id="foodItem">
 		    <span class="badge">${{price}}</span>
 		    {{name}}
 		  </li>
