--- a/client/views/templates/content/myDivys/myDivys.html
+++ b/client/views/templates/content/myDivys/myDivys.html
@@ -3,7 +3,7 @@
 	  <!-- <li class="list__header">
 	    My Divys
 	  </li> -->
-	  {{>header title="My Divys"}}
+	  {{>header title="My Orders"}}
 		{{#each f_divyOrders}}
 		  <li class="list__item " name="commitDivy">
 		    <div style="display:inline-block">
