--- a/client/views/templates/content/myDivys/myDivys.html
+++ b/client/views/templates/content/myDivys/myDivys.html
@@ -7,7 +7,7 @@
 		{{#each f_divyOrders}}
 		  <li class="list__item " name="commitDivy">
 		    <div style="display:inline-block">
-		    <p>Store: {{f_store}}</p>
+		    <p>Store: {{store}}</p>
 		    <p>Orders: {{total}}/{{quota}}</p>
 		    <p>{{commentsCount}}comments</P>
 			</div>
