add timesync package

--- a/client/views/templates/content/divyMenu/divyMenu.html
+++ b/client/views/templates/content/divyMenu/divyMenu.html
@@ -1,5 +1,5 @@
 <template name="divyMenu">
-	{{>header_stealth}}
+	{{>header_stealth back_route="Router.go('storeMenu')" back_name="Store Menu"}}
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
 	<div class="card">
