--- a/client/views/templates/header/header.html
+++ b/client/views/templates/header/header.html
@@ -3,8 +3,7 @@
 	  <div class="navigation-bar__left">
 	  	{{#if back_route}}
 		    <span id="back" class="toolbar-button--quiet navigation-bar__line-height">
-		      <i class="ion-navicon" style="font-size:32px; vertical-align:-6px;"></i>
-		      Back
+		      Back to {{back_name}}
 		    </span>
 	    {{/if}}
 	  </div>
@@ -25,10 +24,13 @@
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
 	<div class="navigation-bar navigation-bar--transparent">
 	  <div class="navigation-bar__left">
-	    <span class="toolbar-button--quiet navigation-bar__line-height">
-	      <i class="ion-navicon" style="font-size:32px; vertical-align:-6px;"></i>
-	    </span>
+	  	{{#if back_route}}
+		    <span id="back" class="toolbar-button--quiet navigation-bar__line-height">
+		      Back to {{back_name}}
+		    </span>
+	    {{/if}}
 	  </div>
+	  
 	  <div class="navigation-bar__center">
 	  </div>
 	  <div class="navigation-bar__right" name="new">
