--- a/client/views/templates/content/storeMenu/storeMenu.html
+++ b/client/views/templates/content/storeMenu/storeMenu.html
@@ -1,30 +1,20 @@
-<!-- <template name="storeMenu">
-	<div class="list-group">
-		{{#each f_stores}}
-			<div class="center">  
-				<a href="#" class="list-group-item">
-			    	<h4 class="list-group-item-heading">{{storename}}</h4>
-			    	<p class="list-group-item-text">distance: {{distance}} {{distance_unit}}</p>
-			    		<p class="list-group-item-text">{{#if open}}Open{{else}}Closed{{/if}}
-			    		</p>	
-			  	</a>
-		  	</div>
-	  	{{/each}}
-	</div>
-</template> -->
-
 <template name="storeMenu">
-	{{> header title="Store Menu"}}
+	{{> header title="Choose a Restaurant"}}
 	<ul class="list">
 	{{#each f_stores}}
-	  <li class="list__item list__item--tappable" name="storeItem">
-	    <h3>{{storename}}</h3>
-	    <p>{{distance}} {{distance_unit}} away. 
-	    	{{#if open}}Open{{else}}Closed{{/if}}
-	    </p>
-	  </li>
+		{{> storeItem}}
 	{{/each}}
 	</ul>
-
 	{{> footer}}
+</template>
+
+<template name="storeItem">
+	<li class="list__item list__item--tappable" name="storeItem">
+	    <h3>{{storename}}</h3>
+	    {{#if f_hasDivy}}
+	    	Divy Kickstarting!<br>
+	    {{/if}}
+	    {{f_deliveryStatus}}
+	    {{f_currentTime}}
+	</li>
 </template>
