--- a/client/views/templates/content/storeMenu/storeMenu.html
+++ b/client/views/templates/content/storeMenu/storeMenu.html
@@ -8,13 +8,33 @@
 	{{> footer}}
 </template>
 
-<template name="storeItem">
+<!-- <template name="storeItem">
 	<li class="list__item list__item--tappable" name="storeItem">
 	    <h3>{{storename}}</h3>
 	    {{#if f_hasDivy}}
 	    	Divy Kickstarting!<br>
 	    {{/if}}
 	    {{f_deliveryStatus}}
-	    {{f_currentTime}}
+	</li>
+</template> -->
+
+<template name="storeItem">
+	<li class="list__item list__item--tappable" name="storeItem">
+		<div class="card">
+			<div class="card-name">{{storename}}</div>
+	          	<div class="card-desc">For you fat chumps<br>{{f_deliveryStatus}}</div>
+		</div>
+
+		<div class="rating"><div class="rating-num">
+		    {{#if f_delivering}}
+		    	Delivering now!
+		    {{else}}
+		    	{{#if f_hasDivy}}
+	    			Divy Kickstarting!
+	    		{{else}}
+	    			Preorder!
+	    		{{/if}}
+	    	{{/if}}
+		</div></div>
 	</li>
 </template>
