user flow overhaul, changing computers

--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -85,6 +85,10 @@ input[type=email], input[type=password] {
 }*/
 
 /*-----------------------------------------------------------------------------*/
+.list___item {
+  height: 150px;
+}
+
 .listItem {
   width: 100%;
 }
