more progress, switch computers again

--- a/client/views/templates/content/divyMenu/divyMenu.html
+++ b/client/views/templates/content/divyMenu/divyMenu.html
@@ -4,8 +4,8 @@
 	{{> storeItem}}
 
 	<div class="list-group">
-  		{{#if f_hasDivys}}
-			{{#with f_divy}}
+  		{{#if f_hasKickstarter}}
+			{{#with f_kickstarter}}
 				{{> existingDivy}}
 			{{/with}}
 		{{else}}
