--- a/client/views/templates/content/foodMenu/foodMenu.html
+++ b/client/views/templates/content/foodMenu/foodMenu.html
@@ -8,4 +8,16 @@
 		  </li>
 		{{/each}}
 	</ul>
+	{{> orderTotal}}
+</template>
+
+<template name="orderTotal">
+	<div class="tab-bar ">
+	  <label class="tab-bar__item tab-bar--top-border__item">
+	    <input type="radio" name="top-tab-bar-b">
+	    <button class="tab-bar__button tab-bar--top-border__button">
+	      Total in cart: ${{totalInOrder}}
+	    </button>
+	  </label>
+	</div>
 </template>
