1st iteration of deliverywindow bulk order algorithm

--- a/client/views/templates/content/divyMenu/divyMenu.html
+++ b/client/views/templates/content/divyMenu/divyMenu.html
@@ -39,8 +39,8 @@
 	<a href="#" class="list-group-item">
 		<h4 class="list-group-item-heading">Preorder for delivery hours</h4>
 	    <p class="list-group-item-text">
-	    	<span>{{f_beginTime}}</span><br>
-	    	<span>{{f_timeFromNow}}</span>
+	    	<span>earliest delivery time: {{f_beginTime}}</span><br>
+	    	<span>earliest delivery total: ${{f_totalPlacedAlready}}</span>
 	    </p>
 	</a>
 </template>
