inside delivery window functionality now working

--- a/client/views/templates/content/foodMenu/foodMenu.html
+++ b/client/views/templates/content/foodMenu/foodMenu.html
@@ -1,6 +1,6 @@
 <template name="foodMenu">
 	<ul class="list-group">
-		{{>backButton _id=this._id router_code="Router.go('divyMenu', {_id: this._id})" }}
+		{{>backButton router_code="Router.go('storeMenu')" }}
 		{{#each f_menuItems}}	
 		  <li class="list-group-item" id="foodItem">
 		    <span class="badge">${{price}}</span>
