--- a/client/views/templates/content/foodMenu/foodMenu.html
+++ b/client/views/templates/content/foodMenu/foodMenu.html
@@ -8,6 +8,7 @@
 		  </li>
 		{{/each}}
 	</ul>
+	<button class="button--large--cta" id="testButton">Test Button</button>
 	{{> orderTotal}}
 </template>
 
