added newDivy template, and fixture data for testing

--- a/client/views/user/templates/content/userHome/userHome.html
+++ b/client/views/user/templates/content/userHome/userHome.html
@@ -27,7 +27,7 @@
 </template>
 
 <template name="newDivyItem">
-	<li class="list__item list__item--tappable" name="divyItem">
+	<li class="list__item list__item--tappable" id="newDivyItem">
 		<div class="card">
 			<div class="card-name">Create a new Divy!</div>
 	        <div class="card-desc"> hungry for something else? </div>
