--- a/client/views/user/templates/content/newDivy/newDivy.html
+++ b/client/views/user/templates/content/newDivy/newDivy.html
@@ -13,7 +13,9 @@
 		<div class="card">
 			<div class="card-name">{{f_storename}}</div>
 	        <div class="card-desc">
-	        	placeholder
+	        	{{distance}} miles <br>
+	        	quota: ${{quota}} <br>
+	        	{{f_deliveryType}} <br>
 	        </div>
 		</div>
 
