--- a/client/views/driver/templates/content/driverLogin/driverLogin.html
+++ b/client/views/driver/templates/content/driverLogin/driverLogin.html
@@ -1,4 +1,4 @@
-<template name="login">
+<template name="driverLogin">
       {{>header title="Log In"}}
 
      <form>
@@ -21,7 +21,7 @@
 </template>
 
 
-<template name="createAccount">
+<template name="driverCreateAccount">
       {{>header title="Create Account" back_route="Router.go('login')"}}
 
      <form>
