--- a/client/views/driver/templates/content/orderList/orderList.html
+++ b/client/views/driver/templates/content/orderList/orderList.html
@@ -1,13 +1,54 @@
 <template name="orderList">
-	{{>header title="Orders"}}
-	
+	<head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="lib/onsen/css/onsenui.css">
+    <link rel="stylesheet" href="../onsen-css-components-blue-basic-theme.css">
+    <link rel="stylesheet" href="checkbox_list.css">
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css"/>
+    <script src="lib/onsen/js/angular/angular.js"></script>
+    <script src="lib/onsen/js/onsenui.js"></script>
+    <script>
+      ons.bootstrap();
+    </script>
+  </head>
+
+	<div class="navigation-bar">
+	  <div class="navigation-bar__left">
+		    <span id="end" class="toolbar-button--quiet navigation-bar__line-height">
+		      End Delivery	   </span>
+	  </div>
+
+	  <div class="navigation-bar__center">
+	    Orders
+	  </div>
+
+	  <div class="navigation-bar__right">
+	  	{{#if right_action}}
+	    	<span class="toolbar-button--quiet navigation-bar__line-height">Label</span>
+	    {{/if}}
+	  </div>
+	</div>
+
+	
+	<!-- <link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css"/>
 	<ul class="list">
 	{{#each f_order}}
 	<div class="list__item">
 		<p>{{username}} {{confirmationnumber}}</p>
 	</div>
 	{{/each}}
+	</ul> -->
+
+	<ul class="list">
+		{{#each f_order}}
+         <ons-list-item modifier="tappable">
+         <label class="checkbox checkbox--list-item">
+            <input type="checkbox" id="boxchecked">
+            <div class="checkbox__checkmark checkbox--list-item__checkmark"></div>
+            <p>{{username}} {{confirmationnumber}}</p>
+          </label>
+        </ons-list-item>
+        {{/each}}
 	</ul>
 	
 	<button type="submit" class="button button--large" id="proceed">Proceed to next drop-off</button>
