--- a/client/views/driver/templates/content/settingMenuDriver/settingMenuDriver.html
+++ b/client/views/driver/templates/content/settingMenuDriver/settingMenuDriver.html
@@ -1,4 +1,4 @@
-<template name="settingMenu">
+<template name="settingMenuDriver">
 	{{> header title="Settings"}}
 	<button type="submit" class="button button--large" id="logout">Logout</button>
 	{{> footer}}
