added driverfooter, driverheader, and pickupMenu

--- a/client/views/driver/templates/content/driverLogin/driverLogin.html
+++ b/client/views/driver/templates/content/driverLogin/driverLogin.html
@@ -1,5 +1,5 @@
 <template name="driverLogin">
-      {{>header title="Log In"}}
+      {{>driverheader title="Log In"}}
 
      <form>
       <div class="login-form">
