--- a/client/views/driver/templates/content/driverMenu/driverMenu.html
+++ b/client/views/driver/templates/content/driverMenu/driverMenu.html
@@ -1,6 +1,6 @@
 <template name="driverMenu">
-	{{> header title="Map"}}
+	{{> driverheader title="Map"}}
 	{{f_processingDivy}}
-	{{> footer}}
+	{{> driverfooter}}
 </template>
 
