--- a/client/views/driver/templates/content/orderList/orderList.html
+++ b/client/views/driver/templates/content/orderList/orderList.html
@@ -53,6 +53,6 @@
 	
 	<button type="submit" class="button button--large" id="proceed">Proceed to next drop-off</button>
 	
-	{{> footer}}
+	{{> driverfooter}}
 	
 </template>
