--- a/client/views/driver/templates/content/orderTrip/orderTrip.html
+++ b/client/views/driver/templates/content/orderTrip/orderTrip.html
@@ -1,10 +1,10 @@
 <template name="orderTrip">
-	{{>header title="Order Trip"}}
+	{{>driverheader title="Order Trip"}}
 	
 	<link rel="stylesheet" type="text/css" href="http://code.ionicframework.com/ionicons/1.5.2/css/ionicons.min.css" />
 	
 	<button type="submit" class="button button--large" id="pickedup">Picked Up</button>
 	
-	{{> footer}}
+	{{> driverfooter}}
 	
 </template>
