--- a/client/views/driver/templates/content/popUpOrder/popUpOrder.html
+++ b/client/views/driver/templates/content/popUpOrder/popUpOrder.html
@@ -26,5 +26,7 @@
 	</div>
 	</ul>
 	<button type="submit" class="button button--large" id="accept" style="position:relative; height:150px; bottom:-390px; font-size: 30px">ACCEPT</button>
+
+	{{> driverfooter}}
 	
 </template>
