--- a/client/views/driver/templates/content/settingMenuDriver/settingMenuDriver.html
+++ b/client/views/driver/templates/content/settingMenuDriver/settingMenuDriver.html
@@ -1,5 +1,5 @@
 <template name="settingMenuDriver">
-	{{> header title="Settings"}}
+	{{> driverheader title="Settings"}}
 	<button type="submit" class="button button--large" id="logout">Logout</button>
-	{{> footer}}
+	{{> driverfooter}}
 </template>
