newDivy template functionning

--- a/client/views/user/templates/content/newDivy/newDivy.html
+++ b/client/views/user/templates/content/newDivy/newDivy.html
@@ -9,7 +9,7 @@
 </template>
 
 <template name="storeItem">
-	<li class="list__item list__item--tappable" name="storeItem">
+	<li class="list__item list__item--tappable" name="storeItem" id="item">
 		<div class="card">
 			<div class="card-name">{{f_storename}}</div>
 	        <div class="card-desc">
